syntax = "proto3";

// protoc proto/connect.proto --go_out=. --go-grpc_out=.

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "proto/pb";

service CloudConnectService {
	// SubscribeBackendRequest connects an edge client to the backend. The edge client will receive backend requests.
	rpc SubscribeBackendRequest (EdgeEnvironment) returns (stream BackendRequest) {}

	// SendEdgeResponse sends edge client responses in reply to backend requests.
	rpc SendEdgeResponse (stream EdgeResponse) returns(Empty) {}

	// SendEdgeUpdate sends edge client update notifications to the backend.
	rpc SendEdgeUpdate (stream UpdateRequest) returns(Empty) {}
}

message Empty {}

message EdgeEnvironment {
	string edge_id = 1;
	int32 loadpoints = 2;
}

message Payload {
	string string_val = 4;
	double float_val = 5;
	bool bool_val = 6;
	int64 int_val = 7;
	google.protobuf.Timestamp time_val = 8;
	google.protobuf.Duration duration_val = 9;
}

message BackendRequest {
	uint64 id = 1;
	int32 api = 2;
	int32 loadpoint = 3;
	Payload payload = 4;
}

message EdgeResponse {
	uint64 id = 1;
	string error = 2;
	int32 loadpoint = 3;
	Payload payload = 4;
}

message UpdateRequest {
	int32 loadpoint = 1;
	string key = 2;
	bytes val = 3;
}
